
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






union bpf_attr {int map_type; int key_size; int value_size; int max_entries; } ;
typedef enum bpf_map_type { ____Placeholder_bpf_map_type } bpf_map_type ;
typedef int attr ;


 int BPF_MAP_CREATE ;
 int __NR_bpf ;
 int syscall (int ,int ,union bpf_attr*,int) ;

int bpf_create_map(enum bpf_map_type map_type, int key_size, int value_size,
     int max_entries, int map_flags)
{
 union bpf_attr attr = {
  .map_type = map_type,
  .key_size = key_size,
  .value_size = value_size,
  .max_entries = max_entries
 };

 return syscall(__NR_bpf, BPF_MAP_CREATE, &attr, sizeof(attr));
}
